<resources>
    <!-- main activity strings -->
    <string name="app_name">Grip</string>
    <string name="total_meal_cost">Total Meal Cost:</string>
    <string name="tax">Tax:</string>
    <string name="initial_tax_tip">0.00</string>
    <string name="calculate_tax">Calculate Tax</string>
    <string name="calculate">Calculate</string>
    <string name="tips">Tips:</string>
    <string name="custom_tip">Custom Tip</string>
    <string name="initial_custom_tip">.25</string>
    <string name="fifteen_percent">15%</string>
    <string name="twenty_percent">20%</string>
    <string name="initial_no_of_people">1</string>
    <string name="no_of_people_sharing">No of People Sharing:</string>
    <string name="calculate_total">Calculate Total</string>
    <string name="grand_total_each">Grand Total (Each):</string>
    <string name="initial_grand_total">$0.00</string>


    <!-- main menu strings -->
    <string name="clear">Clear</string>

    <!-- add menu strings -->
    <string name="add">Add</string>
    <string name="add_item">Add Item</string>
    <string name="cancel">Cancel</string>

    <!-- dialog template strings -->
    <string name="item_name">Item Name:</string>
    <string name="ex_item">Ex: Pizza</string>
    <string name="price">Price:</string>
    <string name="ex_price">2.50</string>
</resources>
