<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jay412.grip.MainActivity">

    <EditText
        android:id="@+id/etMealCost"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/initial_tax_tip"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/tvMealCost"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMealCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/total_meal_cost"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.017" />

    <TextView
        android:id="@+id/tvTaxTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="36dp"
        android:text="@string/tax"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMealCost" />

    <TextView
        android:id="@+id/tvPeopleShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/no_of_people_sharing"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/btn15"
        app:layout_constraintTop_toBottomOf="@+id/btn15" />

    <EditText
        android:id="@+id/etPeopleShare"
        android:layout_width="63dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/initial_no_of_people"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/tvPeopleShare"
        app:layout_constraintTop_toBottomOf="@+id/btnCustomTip" />

    <TextView
        android:id="@+id/tvGrandTotalTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/grand_total_each"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvPeopleShare" />

    <TextView
        android:id="@+id/tvGrandTotalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/initial_grand_total"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvGrandTotalTag"
        app:layout_constraintStart_toEndOf="@+id/tvGrandTotalTag" />

    <EditText
        android:id="@+id/etTax"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/initial_tax_tip"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/tvTaxTag"
        app:layout_constraintTop_toBottomOf="@+id/tvMealCost" />

    <Button
        android:id="@+id/btnCalcTax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/calculate_tax"
        app:layout_constraintStart_toEndOf="@+id/etTax"
        app:layout_constraintTop_toBottomOf="@+id/etMealCost" />

    <Button
        android:id="@+id/btnCalculateTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/calculate_total"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.873" />

    <TextView
        android:id="@+id/tvTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tips"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvTaxTag"
        app:layout_constraintTop_toBottomOf="@+id/tvTaxTag" />

    <EditText
        android:id="@+id/etTips"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/initial_tax_tip"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/etTax"
        app:layout_constraintTop_toBottomOf="@+id/etTax" />

    <Button
        android:id="@+id/btn15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/fifteen_percent"
        app:layout_constraintStart_toStartOf="@+id/tvMealCost"
        app:layout_constraintTop_toBottomOf="@+id/tvTips" />

    <Button
        android:id="@+id/btn20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/twenty_percent"
        app:layout_constraintStart_toEndOf="@+id/btn15"
        app:layout_constraintTop_toTopOf="@+id/btn15" />

    <Button
        android:id="@+id/btnCustomTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/custom_tip"
        app:layout_constraintStart_toEndOf="@+id/btn20"
        app:layout_constraintTop_toTopOf="@+id/btn20" />

    <EditText
        android:id="@+id/etCustomTip"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/initial_custom_tip"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/btnCustomTip"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcTax" />

    <Button
        android:id="@+id/btn_calc_total_meal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/calculate"
        android:backgroundTint="@android:color/holo_green_dark"
        app:layout_constraintStart_toEndOf="@+id/etMealCost"
        app:layout_constraintTop_toTopOf="@+id/etMealCost" />

</android.support.constraint.ConstraintLayout>
